--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poise = "0.6.1-rc1"
+serenity = { version = "0.12.0-rc2", features = ["builder"] }
 tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
 dotenv = "0.15.0"
 serde = { version = "1.0.192", features = ["derive"] }
