Added reviewer commands

--- a/Config.toml.template
+++ b/Config.toml.template
@@ -4,6 +4,7 @@ base_url="http://127.0.0.1:8000"
 [requestx_api_config.paths]
 request_level="/api/v1/request_level"
 review_level="/api/v1/review_level"
+reviewer="/api/v1/reviewer"
 update_request_message_id=""
 update_review_message_id=""
 update_request_thread_id=""
