--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = "0.11.23"
 chrono = "0.4.31"
 url = "2.5.0"
 async-trait = "0.1.77"
+jsonwebtoken = "9.2.0"
 
 [dev-dependencies]
 httpmock = {version = "0.7.0-rc.1", features = ["remote"]}
