--- a/Config.toml
+++ b/Config.toml
@@ -3,6 +3,7 @@ discord_bot_token = "{{REQUESTX_DISCORD_BOT_TOKEN}}"
 discord_app_id = "{{REQUESTX_DISCORD_APP_ID}}"
 discord_guild_id = "{{REQUESTX_DISCORD_GUILD_ID}}"
 discord_reviewer_role_id = "{{REQUESTX_DISCORD_ROLE_ID}}"
+discord_bot_admin_id = "{{REQUESTX_DISCORD_BOT_ADMIN_ID}}"
 
 [requestx_api_config]
 base_url = "http://127.0.0.1:8000"
