--- a/log4rs.yml
+++ b/log4rs.yml
@@ -2,6 +2,8 @@ refresh_rate: 30 seconds
 appenders:
   stdout:
     kind: console
+    encoder:
+      kind: json
   requests:
     kind: rolling_file
     path: "log/requestx_discord_client_log.log"
@@ -16,9 +18,9 @@ appenders:
         count: 5
         pattern: "log/requestx_discord_client_log.{}.log"
     encoder:
-      pattern: "{d} - {m}{n}"
+      kind: json
 root:
-  level: info
+  level: error
   appenders:
     - stdout
 loggers:
